--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'sections/_services.scss';
 @import 'sections/_work-flow.scss';
 @import 'sections/_portfolio.scss';
+@import 'sections/_about.scss';
 @import 'sections/_team.scss';
 @import 'sections/_contact-us.scss';
 @import 'sections/_media.scss';
