--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -20,7 +20,9 @@ input::-ms-reveal { // clear input appearance
   display: none;
 }
 
-input, textarea, button { //prevent outline
+input,
+textarea,
+button { //prevent outline
   border: none;
   &:focus {
     outline: none;
