--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import 'sections/_about.scss';
 @import 'sections/_team.scss';
 @import 'sections/_contact-us.scss';
+@import 'sections/_footer.scss';
 @import 'sections/_media.scss';
 
 /* COMPONENTS
