--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,15 +8,16 @@
 
 /* SECTIONS
 ================================================= */
-@import 'sections/_header.scss';
-@import 'sections/_services.scss';
-@import 'sections/_work-flow.scss';
-@import 'sections/_portfolio.scss';
-@import 'sections/_about.scss';
-@import 'sections/_team.scss';
-@import 'sections/_contact-us.scss';
-@import 'sections/_footer.scss';
-@import 'sections/_media.scss';
+@import 'sections/_header';
+@import 'sections/_services';
+@import 'sections/_work-flow';
+@import 'sections/_portfolio';
+@import 'sections/_about';
+@import 'sections/_team';
+@import 'sections/_our-clients';
+@import 'sections/_contact-us';
+@import 'sections/_footer';
+@import 'sections/_media';
 
 /* COMPONENTS
 ===================================================*/
