--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,40 @@ body {
 .general-btn:hover, .general-btn:active {
   text-decoration: none; }
 
+/* COMPONENTS
+===================================================*/
+.title {
+  display: block;
+  font-size: 30px;
+  font-family: "oswald-bold";
+  color: #131316;
+  text-align: center;
+  text-transform: uppercase; }
+
+.caption {
+  display: block;
+  margin-bottom: 24px;
+  font-size: 16px;
+  font-family: "oswald-regular";
+  color: #515151;
+  text-align: center;
+  text-transform: uppercase; }
+
+.line {
+  display: block;
+  width: 170px;
+  height: 3px;
+  background: #ffe600;
+  margin: 24px auto; }
+
+.description {
+  max-width: 955px;
+  font-size: 16px;
+  font-family: "oswald-light";
+  color: #707070;
+  margin: 0 auto;
+  text-align: center; }
+
 /* SECTIONS
 ================================================= */
 .main-head {
@@ -104,6 +138,9 @@ body {
           -ms-flex-align: stretch;
               align-items: stretch;
       padding: 25px 0 40px; }
+  .main-head .menu-scroll {
+    background-color: #131a1d;
+    box-shadow: 1px 2px 0 #3a3939; }
 
 .logo-holder {
   position: relative;
@@ -182,7 +219,8 @@ body {
   .main-head-information .head-information-more-btn {
     padding: 20px 62px;
     color: #131316;
-    background: #ffe600; }
+    background: #ffe600;
+    display: inline-block; }
     .main-head-information .head-information-more-btn:hover {
       color: #ffe600;
       background: #fff; }
@@ -449,7 +487,8 @@ body {
     background: #ffe600;
     text-transform: uppercase;
     font-size: 15px;
-    font-family: "oswald-bold"; }
+    font-family: "oswald-bold";
+    display: inline-block; }
     .portfolio-feedback .feedback-btn:hover {
       color: #ffe600;
       background: #131316; }
@@ -646,19 +685,18 @@ body {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center;
     margin-top: 83px; }
-    .client-info-container .client-logo-list .client-logo-item {
-      margin-right: 55px; }
-      .client-info-container .client-logo-list .client-logo-item:last-child {
-        margin-right: 0; }
 
 .client-feedback-container {
   font-family: "oswald-regular";
@@ -858,29 +896,6 @@ body {
     opacity: 0;
     width: 95%; } }
 
-/* media for contact section
-======================================*/
-@media screen and (max-width: 991px) {
-  .form-field-control {
-    margin-bottom: 30px; }
-    .form-field-control:last-child {
-      margin-top: 0; } }
-
-@media screen and (max-width: 560px) {
-  .form-field {
-    padding: 15px; }
-  .form-field-control {
-    margin-bottom: 15px; }
-    .form-field-control:last-child {
-      margin-top: 0; }
-  .message-field {
-    margin: 15px 0; }
-  .field-control-general {
-    display: none; }
-  .send-msg-btn {
-    padding: 15px 20px;
-    font-size: 14px; } }
-
 .footer-section {
   padding: 25px;
   font-family: "oswald-regular";
@@ -917,7 +932,171 @@ body {
         .footer-section .social-list .social-item a:hover {
           color: #ffe600; }
 
+@media screen and (max-width: 1440px) {
+  .main-head {
+    padding-bottom: 50px; }
+    .main-head .navigation-container .nav-holder {
+      padding-left: 15px;
+      padding-right: 15px; }
+  .main-head-information {
+    padding: 50px 15px;
+    margin: 50px auto 0; }
+    .main-head-information .information-title-holder .information-title {
+      font-size: 32px; } }
+
+@media screen and (max-width: 1199px) {
+  .work-flow-list .work-flow-list-item {
+    margin-bottom: 30px;
+    padding: 0; }
+    .work-flow-list .work-flow-list-item:last-child {
+      margin-bottom: 0; }
+  .work-flow-list .work-flow-icon-holder i {
+    font-size: 65px; }
+  .services-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .services-list .services-list-item {
+      margin-bottom: 30px;
+      width: 100%; }
+      .services-list .services-list-item:last-child {
+        margin-bottom: 0; }
+  .services-icon-holder {
+    width: 150px;
+    height: 150px;
+    font-size: 65px;
+    margin-bottom: 30px; }
+  .achievement-item {
+    margin-bottom: 30px;
+    padding: 0; }
+    .achievement-item:last-child {
+      margin-bottom: 0; }
+  .portfolio-media-item .portfolio-item-mask .media-title {
+    font-size: 18px; }
+  .about-item-container {
+    position: static;
+    padding: 0; }
+    .about-item-container .caption,
+    .about-item-container .description {
+      text-align: center; }
+    .about-item-container .about-icon-holder {
+      position: static;
+      margin: 0 auto 30px;
+      width: 150px;
+      height: 150px;
+      font-size: 65px; }
+  .about-list .about-item {
+    margin: 0 auto 30px;
+    padding: 0; }
+    .about-list .about-item:last-child {
+      margin-bottom: 0; }
+  .team-member-list .team-member-container {
+    margin: 0 auto; }
+    .team-member-list .team-member-container:last-child {
+      margin-bottom: 0; }
+  .team-member {
+    margin: 0 auto 30px;
+    padding: 0; }
+    .team-member:last-child {
+      margin-bottom: 0; }
+  .contact-item-holder {
+    margin: 0 auto 30px;
+    padding: 0; }
+    .contact-item-holder:last-child {
+      margin-bottom: 0; }
+  .contact-icon-holder {
+    font-size: 65px; } }
+
+@media screen and (max-width: 991px) {
+  .services-section,
+  .work-flow-section,
+  .portfolio-achievements,
+  .about-section,
+  .skills-container,
+  .contact-us-container,
+  .contact-form-info {
+    padding: 30px 0; }
+  .work-flow-list,
+  .services-list,
+  .about-list,
+  .client-info-container .client-logo-list {
+    margin-top: 30px; }
+  .portfolio-feedback .description {
+    margin-bottom: 30px; }
+  .portfolio-section,
+  .team-section {
+    padding-top: 30px; }
+  .team-member-info-container,
+  .client-feedback-container {
+    padding: 30px 15px; }
+  .portfolio-feedback,
+  .team-member-list {
+    margin: 30px 0; }
+  .description {
+    max-width: 100%; }
+  .line {
+    margin: 15px auto; }
+  .caption {
+    margin-bottom: 15px; }
+  .team-member-list .team-member-container .angle-up {
+    display: none; }
+  .portfolio-media-item .portfolio-item-mask .media-title {
+    font-size: 24px; }
+  .portfolio-item {
+    padding: 0;
+    height: 300px;
+    margin: 0 auto 30px; }
+    .portfolio-item .portfolio-picture {
+      max-width: 100%;
+      max-height: 100%;
+      margin: 0 auto; }
+  .portfolio-information {
+    padding: 0;
+    text-align: center; }
+    .portfolio-information .description {
+      text-align: center; }
+  .portfolio-tabs {
+    margin: 20px 0; }
+  .form-field-control {
+    margin-bottom: 30px; }
+    .form-field-control:last-child {
+      margin-top: 0; } }
+
+@media screen and (max-width: 920px) {
+  .client-info-container {
+    padding: 30px 0; }
+  .client-info-container .client-logo-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .client-logo-item {
+    margin: 0 auto 30px; }
+    .client-logo-item:last-child {
+      margin-bottom: 0; } }
+
 @media screen and (max-width: 768px) {
+  .main-head {
+    padding: 65px 0 30px; }
   .mob-menu {
     display: block; }
   .nav-holder {
@@ -927,15 +1106,14 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     position: relative; }
-    .nav-holder .logo-holder .logo {
-      left: 15px; }
     .nav-holder .menu-holder {
       width: 100%;
       position: absolute;
+      display: none;
       left: 0;
       right: 0;
       top: 65px;
-      display: none; }
+      box-shadow: 1px 2px 0 #3a3939; }
       .nav-holder .menu-holder .menu-list {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -960,36 +1138,48 @@ body {
             margin: 0;
             display: block; } }
 
-/* COMPONENTS
-===================================================*/
-.title {
-  display: block;
-  font-size: 30px;
-  font-family: "oswald-bold";
-  color: #131316;
-  text-align: center;
-  text-transform: uppercase; }
-
-.caption {
-  display: block;
-  margin-bottom: 24px;
-  font-size: 16px;
-  font-family: "oswald-regular";
-  color: #515151;
-  text-align: center;
-  text-transform: uppercase; }
-
-.line {
-  display: block;
-  width: 170px;
-  height: 3px;
-  background: #ffe600;
-  margin: 24px auto; }
-
-.description {
-  max-width: 955px;
-  font-size: 16px;
-  font-family: "oswald-light";
-  color: #707070;
-  margin: 0 auto;
-  text-align: center; }
+@media screen and (max-width: 560px) {
+  .main-head-information {
+    padding: 30px 15px;
+    margin: 30px auto 0; }
+    .main-head-information .head-information-more-btn {
+      padding: 15px 50px; }
+    .main-head-information .information-title-holder {
+      margin-bottom: 30px; }
+      .main-head-information .information-title-holder .information-title {
+        font-size: 18px; }
+  .form-field {
+    padding: 15px; }
+  .form-field-control {
+    margin-bottom: 15px; }
+    .form-field-control:last-child {
+      margin-top: 0; }
+  .message-field {
+    margin: 15px 0; }
+  .field-control-general {
+    display: none; }
+  .send-msg-btn {
+    padding: 15px 20px;
+    font-size: 14px; }
+  .portfolio-tabs {
+    font-size: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+    .portfolio-tabs li {
+      margin: 0;
+      padding: 10px 0; }
+      .portfolio-tabs li:after {
+        display: none; }
+  .portfolio-item {
+    height: 190px; } }
